# Week3

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  LegacyLensProject.md  PRD.md  README.md  Week3_Presearch.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  golden-eval.yml  pr-check.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/core/: query_pipeline.py
backend/app/core/auth/: jwt_validator.py
backend/app/core/features/: cobol_features.py
backend/app/core/generation/: answer_generator.py
backend/app/core/ingestion/: chunk_filter.py  chunker.py  embedder.py  file_scanner.py
backend/app/core/retrieval/: pinecone_client.py  reranker.py
backend/app/models/: requests.py  responses.py
backend/eval_results/: prod_deployed_eval_latest.md
backend/scripts/: check_coverage.sh  compare_embeddings.py  eval_shared.py  evaluate.py  evaluate_deployed.py  ingest.py
backend/tests/: conftest.py
backend/tests/fixtures/: golden_queries.json  sample.cob
backend/tests/integration/: test_golden_queries.py
backend/tests/unit/: test_answer_generator.py  test_chunk_filter.py  test_chunker.py  test_config.py  test_dependencies.py  test_embedder.py  test_features.py  test_file_scanner.py  test_jwt_validator.py  test_models.py  test_pinecone_client.py  test_query_pipeline.py  test_reranker.py  test_router_scaffold.py
docs/: BUILD_ORDER.md  BUILD_v2.md  BuildProgress.md  COST_LOG.md  DEMO_SCRIPT_5MIN_PERSONABLE.md  DEMO_SCRIPT_ARCHITECTURE_WALKTHROUGH.md  RAG_ARCHITECTURE.md  STEP13_DEPLOY_WALKTHROUGH.md  embedding-score-optimization.md  plan-query-sse-pipeline.md  voyage-code-2-experiment-brief.md
docs/process/templates/: claude-planning-prompt.md  cursor-implementation-prompt.md  phase-approval-checklist.md  test-quality-checklist.md
docs/scopes/: SCOPE_TEMPLATE.md  feature-retrieval-reranker.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/__tests__/components/: AuthButton.test.tsx
frontend/src/: middleware.ts
frontend/src/__mocks__/: mermaid.ts
frontend/src/__tests__/: middleware.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/auth/token/: route.ts
frontend/src/app/architecture/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: AnswerDisplay.tsx  ArchitectureDiagram.tsx  AuthButton.tsx  QueryInput.tsx  ResultCard.tsx  SearchContainer.tsx
frontend/src/components/__tests__/: AnswerDisplay.test.tsx  ArchitectureDiagram.test.tsx  AuthButton.test.tsx  QueryInput.test.tsx  ResultCard.test.tsx  SearchContainer.test.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/src/types/: api.ts  auth.ts
scripts/hooks/: pre-commit
